--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -36,4 +36,4 @@ jobs:
     - name: Install Surge
       run: npm install -g surge
     - name: Run Surge
-      run: surge ./ bootcampfirstreactapp2020.surge.sh/ --token ${{secrets.SURGE_TOKEN}}
+      run: surge ./build bootcampfirstreactapp2020.surge.sh/ --token ${{secrets.SURGE_TOKEN}}
